force-app/main/default/objects/Quote_Multi_Price_Breaks__c/Quote_Multi_Price_Breaks__c.object-meta.xml
<CustomObject>
    <description>This object is created to add multiple price breaks in quotation for global distributor partners.</description>
    <label>Price Breaks</label>
    <nameField>
        <displayFormat>PB-{0000000}</displayFormat>
        <label>Price breaks Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Breaks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>