force-app/main/default/objects/Quote_Multi_Price_Breaks__c/fields/Price_Sample_1000k__c.field-meta.xml
<CustomField>
    <fullName>Price_Sample_1000k__c</fullName>
    <label>1000K+</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>