force-app/main/default/objects/Quote_Multi_Price_Breaks__c/fields/Price_Sample_100__c.field-meta.xml
<CustomField>
    <fullName>Price_Sample_100__c</fullName>
    <label>Samples &lt; 100</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>