force-app/main/default/objects/Quote_Multi_Price_Breaks__c/fields/Price_Sample_10k__c.field-meta.xml
<CustomField>
    <fullName>Price_Sample_10k__c</fullName>
    <label>10K+</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>