force-app/main/default/objects/Quote_Multi_Price_Breaks__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Price Breaks (Automotive Products)</relationshipLabel>
    <relationshipName>Price_breaks</relationshipName>
    <type>Lookup</type>
</CustomField>