force-app/main/default/objects/Quote_Multi_Price_Breaks__c/fields/Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Price Breaks (Automotive Products)</relationshipLabel>
    <relationshipName>Price_Breaks</relationshipName>
    <type>Lookup</type>
</CustomField>