force-app/main/default/objects/Quote_Multi_Price_Breaks__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Year</label>
    <length>8</length>
    <type>Text</type>
</CustomField>